Changes for 1.7.3

 - [DEV-333] fixed processing of not supported active and trapper items (Sasha)
 - [DEV-333,ZBX-1254] fixed queue screen with separated availability of SNMP,IPMI and others items (Sasha)
 - [ZBX-1324] replaced user visible string ZABBIX with Zabbix (Alexei, Richlv)
 - [DEV-137] added file CREDITS (Alexei)
 - [DEV-333] fixed possible server crash while processing remote commands (Dmitry)
 - [ZBX-998] modified PostgreSQL schema for support of uint64 history values (Sasha)
 - [ZBX-1317] fixed resource type for maintenance in audit (Vedmak)
 - [DEV-369] added support of file log rotation, item's "log[]" parameter "file" now has a format of "[path][regexp]" (Dmitry)
 - [ZBX-1310] fixed template creating form (Vedmak)
 - [ZBX-1312] removed huge, unused Japanese fonts (Richlv)
 - [ZBX-1272] server name is now shown in page title too (Vedmak)
 - [DEV-137] PDF manual replaced by a README file with a link to on-line documentation (Alexei)
 - [ZBX-1302] fixed references to missing items.nextcheck in the GUI (Alexei)
 - [ZBX-1230] IP adresss is made a default selection in host details form (Alexei)
 - [ZBX-1222] fixed default Debug Log level for agents (Alexei)
 - [DEV-434] added support of host availability for proxy hosts (Sasha)
 - [ZBX-1289] fixed memory leak in server pollers (Sasha)
 - [DEV-433] added generation events after maintenance period if trigger status changed during this period (Sasha)
 - [DEV-137] updated French translation. Thanks to alixen (Richlv)

Changes for 1.7.2

 - [DEV-430] added map labels macro {TRIGGERS.UNACK} (Sasha)
 - [DEV-430] added notification macro {TRIGGER.EVENTS.UNACK} (Sasha)
 - [ZBX-1095] fixed "Link to template" operation for discovered hosts (Sasha)
 - [ZBX-1015] added support of LVM devices for system.swap.in/out under Linux. Thanks to Takanori Suzuki (Sasha)
 - [DEV-429] added support of system.cpu.switches under Linux 2.4/2.6 (Sasha)