@@ -553,8 +553,8 @@
 	'S_CREATE_MAINTENANCE_PERIOD'=>			'Créer une période de maintenance',
 	'S_MAINTENANCE_TYPE'=>			'Type de maintenance',
 	'S_EXPIRED'=>			'Expirée',
-	'S_NORMAL_PROCESSING'=>			'Traitement normal',
-	'S_NO_DATA_PROCESSING'=>			'Pas de donnée traitée',
+	'S_WITH_DATA_COLLECTION'=>			'Traitement normal',
+	'S_NO_DATA_COLLECTION'=>			'Pas de donnée traitée',
 	'S_DELETE_MAINTENANCE_PERIOD_Q'=>			'Supprimer la période de maintenance ?',
 	'S_ACTIVE_SINCE'=>			'Actif depuis',
 	'S_ACTIVE_TILL'=>			'Actif jusqu\'à',
