@@ -547,8 +547,8 @@
 	'S_CREATE_MAINTENANCE_PERIOD'=>			'メンテナンス期間の作成',
 	'S_MAINTENANCE_TYPE'=>			'メンテナンスタイプ',
 	'S_EXPIRED'=>			'期限切れ',
-	'S_NORMAL_PROCESSING'=>			'通常の処理',
-	'S_NO_DATA_PROCESSING'=>			'ZABBIXトラッパー用の処理',
+	'S_WITH_DATA_COLLECTION'=>			'通常の処理',
+	'S_NO_DATA_COLLECTION'=>			'ZABBIXトラッパー用の処理',
 	'S_DELETE_MAINTENANCE_PERIOD_Q'=>			'メンテナンス期間を削除しますか?',
 	'S_ACTIVE_SINCE'=>			'開始日時',
 	'S_ACTIVE_TILL'=>			'終了日時',
