@@ -547,8 +547,8 @@
 	'S_CREATE_MAINTENANCE_PERIOD'=>			'Создать период обслуживания',
 	'S_MAINTENANCE_TYPE'=>			'Тип обслуживания',
 	'S_EXPIRED'=>			'Завершено',
-	'S_NORMAL_PROCESSING'=>			'Нормальная обработка',
-	'S_NO_DATA_PROCESSING'=>			'Обработка без данных',
+	'S_WITH_DATA_COLLECTION'=>			'Нормальная обработка',
+	'S_NO_DATA_COLLECTION'=>			'Обработка без данных',
 	'S_DELETE_MAINTENANCE_PERIOD_Q'=>			'Удалить период обслуживания',
 	'S_ACTIVE_SINCE'=>			'Активно с',
 	'S_ACTIVE_TILL'=>			'Активно до',
