@@ -1,5 +1,6 @@
 Changes for 1.7.3
 
+ - [ZBX-1337] rename maintenance types for clarity (Richlv)
  - [DEV-333] fixed processing of not supported active and trapper items (Sasha)
  - [DEV-333,ZBX-1254] fixed queue screen with separated availability of SNMP,IPMI and others items (Sasha)
  - [ZBX-1324] replaced user visible string ZABBIX with Zabbix (Alexei, Richlv)
